[tool.poetry]
name = "yoga-api-svc"
version = "0.1.0"
description = ""
authors = ["Nanda Krishna <nandakrishnak1999@gmail.com>"]
readme = "README.md"
packages = [{include = "yoga_api_svc"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
